.provarCaches/00D6C0000000xA6UAI/objects/zkmulti__MCShipmate_Preference__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AutoWeighPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Weight Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Contact_Title__c</fullName>
        <label>Billing Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccountDescription__c</fullName>
        <label>Carrier Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierType__c</fullName>
        <label>CarrierType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Id__c</fullName>
        <label>Carrier Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency_Default__c</fullName>
        <label>Currency Default</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DefaultEmailSendTo__c</fullName>
        <label>Default Email Send To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DefaultLetterHeadImage__c</fullName>
        <label>Default LetterHead Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DefaultSignatureImage__c</fullName>
        <label>Default Signature Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DetailedViewReUsePackageList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed View Re Use Package List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units_Default__c</fullName>
        <label>Dimension Units Default</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DocPrinterId__c</fullName>
        <label>DocPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailMessageDefault__c</fullName>
        <label>Email Message Default</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnDeliveryDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnEstimatedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Estimated Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnExceptionDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnTender__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notify on Tender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailLabelReplyToEmailDefault__c</fullName>
        <description>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</inlineHelpText>
        <label>Email Label Reply-To Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailLabelSenderDisplayNameDefault__c</fullName>
        <description>For completed Shipments, this will be the default sender display name when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default sender display name when sending shipping labels via email</inlineHelpText>
        <label>Email Label Sender Display Name Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailLabelSubjectLineDefault__c</fullName>
        <description>For completed Shipments, this will be the default email subject line when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email subject line when sending shipping labels via email</inlineHelpText>
        <label>Email Label Subject Line Default</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailLabelTextBodyDefault__c</fullName>
        <description>For completed Shipments, this will be the default email body when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email body when sending shipping labels via email</inlineHelpText>
        <label>Email Label Text Body Default</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailNotifyOnShipmentDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Email_Template_Id_Default__c</fullName>
        <label>Email Template Id Default</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EnableScales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Scales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedGenericFedExEndUserKey__c</fullName>
        <label>Encrypted Generic FedEx End User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedGenericFedExEndUserPasswd__c</fullName>
        <label>Encrypted Generic FedEx End User Passwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedMeterNumber__c</fullName>
        <label>Encrypted Meter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__GenericCredentialsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic Credentials Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__GenericFedExEndUserKey__c</fullName>
        <label>Generic FedEx End User Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__GenericFedExEndUserPassword__c</fullName>
        <label>Generic FedEx End User Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Demo_Carrier_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Type_Default__c</fullName>
        <label>Label Image Type Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__LastClosePerformedAt__c</fullName>
        <label>Last Close Performed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__LastCloseTimestamp__c</fullName>
        <label>Last Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__LastVersionCaptureTime__c</fullName>
        <label>Last Version Capture Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__LicenseAgreementAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__MeterNumber__c</fullName>
        <label>Meter Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonThermalPrinterId__c</fullName>
        <label>NonThermalPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OrgWideAddressId__c</fullName>
        <label>Org Wide Address Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PreferenceInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Preference Info</label>
        <referenceTo>zkmulti__Shipmate_Preference_Info__c</referenceTo>
        <relationshipLabel>Shipping Preferences</relationshipLabel>
        <relationshipName>Shipmate_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleComputerId__c</fullName>
        <label>Scale Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleDeviceId__c</fullName>
        <label>Scale Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleName__c</fullName>
        <label>Scale Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SendEMailNotificationToRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification to Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SendEMailNotificationToShipper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification to Shipper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Email_Default__c</fullName>
        <description>If specified, the sender email will be defaulted to this value for all users. Otherwise, the sender email will be the email address of the user.</description>
        <inlineHelpText>If specified, the sender email will be defaulted to this value for all users. Otherwise, the sender email will be the email address of the user.</inlineHelpText>
        <label>Sender Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Name_Default__c</fullName>
        <description>If specified, the sender name will be defaulted to this value for all users. Otherwise, the sender name will be the name of the user.</description>
        <inlineHelpText>If specified, the sender name will be defaulted to this value for all users. Otherwise, the sender name will be the name of the user.</inlineHelpText>
        <label>Sender Name Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Phone_Default__c</fullName>
        <description>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</description>
        <inlineHelpText>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</inlineHelpText>
        <label>Sender Phone Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_Is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SubscriptionDataEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Data Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThermalPrinterId__c</fullName>
        <label>Thermal Printer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Tracking_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracking Preference</label>
        <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
        <relationshipName>Shipmate_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units_Default__c</fullName>
        <label>Weight Units Default</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Shipping Preference</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <columns>zkmulti__Carrier__c</columns>
        <columns>NAME</columns>
        <columns>zkmulti__AccountNumber__c</columns>
        <columns>zkmulti__Carrier_Account_Id__c</columns>
        <columns>zkmulti__Shipping_Country__c</columns>
        <columns>zkmulti__Shipping_Street__c</columns>
        <columns>zkmulti__Shipping_Zip_Postal_Code__c</columns>
        <columns>zkmulti__CarrierAccountDescription__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ShippingPreference-{000000}</displayFormat>
        <label>Shipping Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>